--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 port =  8000;
 MONGO_URL = mongodb+srv://vishal:password@cluster0.ys6rowk.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=CHAI-AUR-CODE
+ACESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=HUI-HUI-HUI
+REFRESH_TOKEN_EXPIRY=10d
