--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "prettier": "^3.7.4"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookies-parser": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^8.21.0"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.21.0",
+    "mongoose-aggregate-paginate-v2": "^1.1.4"
   }
 }
